Fixed spacing at the end of buttons in safari.
git-svn-id: svn://svn.ispconfig.org/ispconfig3/trunk@304 c1a6f2c7-8504-0410-933a-a4dae0184b0a

--- a/interface/web/themes/default/style.css
+++ b/interface/web/themes/default/style.css
@@ -315,6 +315,7 @@ TEXTAREA {
 	font-size:14px;
     /* used to catch the buttonEnding */
     position: relative;
+	margin-right:0px
 }
 
 .buttonEnding {
